--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 20/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 99 points<br>
+Unlocked 20/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 105 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -47,29 +47,30 @@ Unlocked 20/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     87 status
-     60 --git-dir=.git
-     40 add
-     37 commit
-     36 checkout
-     31 branch
-     28 push
-     27 difftool
-     25 help
+    105 status
+     68 --git-dir=.git
+     45 add
+     42 commit
+     42 checkout
+     39 branch
+     32 push
+     31 difftool
+     30 help
      12 rev-parse
+     11 reset
+     11 rebase
      11 --git-dir=/home/stavros/git/otp/.git
-     10 rebase
      10 log
-      8 reset
-      8 diff
+      9 diff
+      7 stash
+      7 pull
       6 tree
-      6 pull
-      4 stash
       3 init
       2 tag
       2 mergetool
