--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 20/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 105 points<br>
+Unlocked 21/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 108 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 3)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
@@ -53,33 +54,35 @@ Unlocked 20/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    105 status
-     68 --git-dir=.git
-     45 add
-     42 commit
-     42 checkout
-     39 branch
-     32 push
-     31 difftool
-     30 help
-     12 rev-parse
-     11 reset
-     11 rebase
-     11 --git-dir=/home/stavros/git/otp/.git
-     10 log
+    145 status
+    108 --git-dir=.git
+     60 checkout
+     52 add
+     50 commit
+     49 branch
+     47 help
+     46 difftool
+     42 push
+     18 rev-parse
+     16 reset
+     15 rebase
+     14 --git-dir=/home/stavros/git/otp/.git
+     12 log
+     10 pull
       9 diff
       7 stash
-      7 pull
       6 tree
       3 init
+      3 cherry-pick
       2 tag
       2 mergetool
+      2 merge
       2 config
       2 clean
-      2 cherry-pick
       2 blame
       1 remote
       1 gc
+      1 fetch
       1 achievements
 </pre>
 <script type="text/javascript">
@@ -93,7 +96,6 @@ function showLocked() {
 There are 50 Achievements. Some achievements can be leveled up depending on the number of times it is used (Used 2 times = level 1, 4 = level 2, 8 = level 3, 16 = level 4, 32 = level 5, etc)
 <ul>
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
-<li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
 <li><div class="title">Butcher</div><div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Carpenter</div><div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
