--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 21/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 112 points<br>
+Unlocked 21/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 119 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -51,28 +51,29 @@ Unlocked 21/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    148 status
-    109 --git-dir=.git
-     61 checkout
-     52 add
-     51 commit
-     49 branch
-     47 help
-     46 difftool
-     42 push
+    162 status
+    123 --git-dir=.git
+     70 checkout
+     61 add
+     59 difftool
+     56 commit
+     55 branch
+     50 help
+     43 push
+     21 reset
      18 rev-parse
-     18 reset
-     15 rebase
+     18 rebase
      14 --git-dir=/home/stavros/git/otp/.git
      12 log
+     11 diff
      10 pull
-      9 diff
+      7 tree
       7 stash
-      6 tree
       3 init
       3 cherry-pick
       2 tag
